<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>roscomp</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="michele.guzzinati@hipert.it">mguzzinati</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend condition="$ROS_VERSION == 1 and $BUILD_TYPE == catkin_make">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 1 and $BUILD_TYPE != catkin_make">cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">rosbag</depend>
    <depend condition="$ROS_VERSION == 2">rosbag2_cpp</depend>

    <depend>ackermann_msgs</depend>
    <depend condition="$ROS_VERSION == 1">actionlib_msgs</depend>
    <depend condition="$ROS_VERSION == 2">action_msgs</depend>
    <depend>actuation_msgs</depend>
    <depend>adx_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend condition="$ROS_VERSION == 1">gps_common</depend>
    <depend condition="$ROS_VERSION == 2">gps_msgs</depend>
    <depend>nav_msgs</depend>
    <depend condition="$ROS_VERSION == 2">nav2_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>wiimote_msgs</depend>

    <export>
        <build_type condition="$BUILD_TYPE != catkin_make">cmake</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
